# free-claw-code

./: .claude.json  .gitignore  CLAUDE.md  PHILOSOPHY.md  README.md  USAGE.md  install.sh
free-claw-router/: README.md  pyproject.toml
free-claw-router/ops/: allowed_sources.yaml  catalog-schema.json  claude-review-prompt.md
free-claw-router/router/: __init__.py
free-claw-router/router/adapters/: hermes_credentials.py  hermes_ratelimit.py
free-claw-router/router/catalog/: hot_reload.py  registry.py  schema.py
free-claw-router/router/dispatch/: client.py  fallback.py  sse.py  sse_relay.py
free-claw-router/router/learning/: batch_analyzer.py  insight_generator.py  nudge_cache.py  nudge_injector.py  rule_detector.py  trajectory_compressor.py
free-claw-router/router/memory/: idle_detector.py  injector.py  miner.py  transcript.py  wakeup.py  wing_manager.py
free-claw-router/router/meta/: meta_analyzer.py  meta_consensus.py  meta_editor.py  meta_evaluator.py  meta_pr.py  meta_suggestions.py  meta_targets.yaml
free-claw-router/router/quota/: backpressure.py  bucket.py  predict.py
free-claw-router/router/routing/: affinity.py  decide.py  hints.py  policy.py  policy.yaml  score.py
free-claw-router/router/server/: _injection.py  _quota_middleware.py  _telemetry_middleware.py  dev_triggers.py  gc.py  lifespan.py  meta_report.py  openai_compat.py
free-claw-router/router/skills/: adapter.py  analyzer_hook.py  bridge.py  triggers.py
free-claw-router/router/telemetry/: evaluations.py  events.py  ingest_jsonl.py  readmodels.py  spans.py  store.py
free-claw-router/tests/: test_adapter_credentials.py  test_adapter_ratelimit.py  test_affinity_runtime.py  test_catalog_hot_reload.py  test_catalog_openrouter.py  test_catalog_registry.py  test_catalog_schema.py  test_dev_triggers.py  test_dispatch_client.py  test_dispatch_fallback.py  test_gc.py  test_learning_batch_analyzer.py  test_learning_hooks.py  test_learning_insight_generator.py  test_learning_nudge_cache.py  test_learning_nudge_injector.py  test_learning_rule_detector.py  test_learning_trajectory_compressor.py  test_learning_wiring.py  test_memory_injection_e2e.py  test_memory_injector.py  test_memory_migration.py  test_memory_miner.py  test_memory_session_close.py  test_memory_transcript.py  test_memory_transcript_events.py  test_memory_wakeup.py  test_memory_wing_manager.py  test_meta_alerts.py  test_meta_analyzer.py  test_meta_block.py  test_meta_consensus.py  test_meta_editor.py  test_meta_evaluator.py  test_meta_integration.py  test_meta_pr.py  test_meta_report.py  test_meta_suggestions.py  test_ops_schema.py  test_quota_backpressure.py  (+29 more)
rust/: Cargo.toml
rust/crates/api/: Cargo.toml
rust/crates/commands/: Cargo.toml
rust/crates/runtime/: Cargo.toml
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/telemetry/: Cargo.toml
rust/crates/tools/: Cargo.toml
(+66 files in other folders)
