[project]
name = "free-claw-router"
version = "0.0.1"
description = "Free-only LLM router sidecar for free-claw-code"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "anyio>=4.3",
  "watchdog>=4.0",
  "apscheduler>=3.10",
  "mempalace>=3.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "httpx[http2]>=0.27",
  "jsonschema>=4.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["router"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
